--- a/marketing_wizard/composer.json
+++ b/marketing_wizard/composer.json
@@ -13,7 +13,9 @@
         "intervention/image": "^2.3",
         "stripe/stripe-php": "^4.12",
         "overtrue/socialite": "^1.3",
-        "laravel/socialite": "2.0.x-dev"
+        "laravel/socialite": "2.0.x-dev",
+        "aws/aws-sdk-php": "~3.0",
+        "aws/aws-sdk-php-laravel": "~3.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
